...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioFile"
                            style="?android:textAppearanceMedium"
...
                            android:checked="true"
                            android:fontFamily="light"
                            android:gravity="center_vertical"
                            android:text="Select file" />

                        <RadioButton
                            android:id="@+id/radioNewFile"
                            style="?android:textAppearanceMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:fontFamily="light"
                            android:gravity="center_vertical"
                            android:text="Select new file" />

                        <RadioButton
                            android:id="@+id/radioDir"
                            style="?android:textAppearanceMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
                        android:layout_gravity="left"
                        android:fontFamily="light"
                        android:gravity="center_vertical"
                        android:text="Multiple items" />

                    <CheckBox
                        android:id="@+id/checkSingleClick"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="left"
                        android:fontFamily="light"
                        android:gravity="center_vertical"
...
                        android:layout_gravity="left"
                        android:fontFamily="light"
                        android:gravity="center_vertical"
                        android:text="Allow creation of directories" />

                    <CheckBox
                        android:id="@+id/checkAllowExistingFile"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="left"
                        android:checked="true"
                        android:fontFamily="light"
                        android:gravity="center_vertical"
                        android:text="Allow selection of existing (new) file" />

                    <CheckBox
                        android:id="@+id/checkLightTheme"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...
                        android:gravity="center_vertical"
                        android:text="Use light theme" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_sd"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:fontFamily="light"
                    android:gravity="center"
                    android:text="Pick SD-card" />

                <Button
                    android:id="@+id/button_image"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
...
                    android:layout_marginTop="8dp"
                    android:fontFamily="light"
                    android:gravity="center"
                    android:text="Pick With Root Access" />

                <TextView
                    android:id="@+id/text"
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:fontFamily="light"
...
