...
            android:ellipsize="start"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
    </android.support.v7.widget.Toolbar>

    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nnf_buttons_container"
        android:layout_below="@+id/nnf_picker_toolbar"
        android:descendantFocusability="afterDescendants"
        android:focusable="true"
        app:fastScrollAutoHide="true"
        app:fastScrollAutoHideDelay="1500"
        app:fastScrollPopupBgColor="?colorAccent"
...
                android:layout_weight="1"
                android:text="@string/nnf_list_ok"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nnf_newfile_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nnf_text_filename"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/nnf_filename"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

            <ImageButton
                android:id="@+id/nnf_button_ok_newfile"
                style="?attr/borderlessButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:hint="@string/nnf_list_ok"
                app:srcCompat="@drawable/nnf_ic_save_black_24dp"
                android:tint="?attr/nnf_save_icon_color"/>
...
